@@ -1,6 +1,7 @@
 2022-01-20  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/core_2d_camera.rb: Added
+	* examples/shapes_lines_bezier.rb: Added
 
 2022-01-19  vaiorabbit  <http://twitter.com/vaiorabbit>
 
